[package]
name = "vcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "0.30.5", features = ["tty-emitter"]}
swc_ecma_parser = "0.132.6"
swc_ecma_ast = "0.102.5"
swc_ecma_visit = "0.88.5"
